Prepare cross-building (#646)
* Add cross-build support for Spark 3.5, 4.0, and 4.1

Set up single-branch cross-building driven by -DsparkVersion system property,
following the pattern from spark-testing-base. Source layout uses common +
version-specific directories (3.5/, 4.x/, 4.0/, 4.1/) where 4.x is shared
across all Spark 4.x builds.

Key changes:
- build.sbt: sparkVersion settingKey, dynamic Scala/Java version selection,
  version-specific unmanagedSourceDirectories, conditional dependencies
  (spark-sql-api for 4.x), artifact version suffix (-spark_X.Y)
- Moved SnowflakeSparkUtils and SparkStreamingFunctions to version-specific
  dirs (use internal Spark APIs that differ across versions)
- CI workflows: multi-version matrix with appropriate Java versions
- deploy.sh/mini-cross-build.sh: cross-version publish scripts
- run-tests-github.sh: uses -DsparkVersion instead of -Dspark.testVersion

Version matrix:
  Spark 3.5: Scala 2.12/2.13, Java 8  -> 3.1.8-spark_3.5
  Spark 4.0: Scala 2.13, Java 17      -> 3.1.8-spark_4.0
  Spark 4.1: Scala 2.13, Java 17      -> 3.1.8-spark_4.1

https://claude.ai/code/session_01Bbsf9kV1AcVx436PyUzjLv

* Fix review issues: ++! force mode, deploy staging, matrix CI, scalastyle

- run-tests-github.sh: Use ++SCALA_VERSION! (force mode) so it works
  when crossScalaVersions is empty (Spark 4.x has only 2.13)
- deploy.sh: Run sonaUpload/sonaRelease per spark version instead of
  once at the end (each needs its own staging context)
- CI workflows: Use proper matrix + exclude instead of hand-enumerated
  entries for 2.13 and GCP 2.13 workflows
- build.sbt: Add scalastyleSources for version-specific dirs, add
  comment about string comparison caveat
- plugins.sbt: Remove unused sparkV/sparkMajor dead code

https://claude.ai/code/session_01Bbsf9kV1AcVx436PyUzjLv

* Warn when filter pushdown is used with ANSI mode enabled

Log a warning in buildScan() when spark.sql.ansi.enabled=true and
filters are being pushed down, since pushdown behavior